--- a/dashcoch/config/config_default.yaml
+++ b/dashcoch/config/config_default.yaml
@@ -303,7 +303,7 @@ i18n:
   plot_hospitalizations_country_title:
     - Cumulative Hospitalizations (Releases are not Subtracted)
     - Kumulative Hospitalisierungen (Entlassungen nicht Abgezogen)
-    - Hospitalisations Cumulées (Mises à Pied non Déduites)
+    - Hospitalisations Cumulées (Sortis non Déduites)
   plot_hospitalizations_country_x:
     - Date
     - Datum
@@ -327,7 +327,7 @@ i18n:
   plot_releases_country_title:
     - Total Reported Hospital Releases
     - Total Bestätigte Spitalentlassungen
-    - Total des Congés Hospitaliers Confirmés
+    - Total Sortis de l’Hôpital
   plot_releases_country_x:
     - Date
     - Datum
@@ -335,7 +335,7 @@ i18n:
   plot_releases_country_y:
     - Releases
     - Entlassungen
-    - Licenciements
+    - Sortis
   plot_loglog_country_title:
     - Newly Reported Cases
     - Neu Bestätige Fälle
